# bartab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-hf-space.yml  python-test.yml
bartab/: __init__.py  cli.py  io.py  plotting.py  simulation.py  transforms.py
bartab/app/: README.md  app.py  requirements.txt
bartab/app/data/examples/single-point/: dose-response_count.csv  dose-response_sample_meta.csv  dose-response_strain_meta.csv  test_count.csv  test_sample_meta.csv  test_strain_meta.csv
bartab/models/: anndata.py  base.py  linear.py  nonlinear.py
test/: test-dose.sh  test-growth-ols.sh  test-growth-wls-multiref.sh  test-growth-wls.sh  test-spike.sh  test.sh  test_suite.py
test/inputs/: dose-response_count.csv  dose-response_sample_meta.csv  dose-response_strain_meta.csv  fitness.json  ic50s.json  test_count.csv  test_counts.csv  test_sample_meta.csv  test_strain_meta.csv  true-fitness.json
test/scripts/: generate-tables.py  generate-tables.sh
