[project]
name = "bartab"
version = "0.0.2"
authors = [
  { name="Eachan Johnson", email="eachan.johnson@crick.ac.uk" },
]
description = "Analysis of barcoded, pooled functional genomics assays."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
  "biology",
  "statistics",
  "sequencing",
  "crispr",
  "crispri-seq",
  "bar-seq",
]

classifiers = [  
  
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  #"Intended Audience :: Science/Research",
  #"Topic :: Scientific/Engineering :: Artificial Intelligence",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "anndata",
  "carabiner-tools[pd,mpl]>=0.0.5.post3",
  #"pydeseq2",
  "scipy",
  "scikit-learn",
  "nemony",
  "numpy",
  "statsmodels",
]

[project.optional-dependencies]
all = []
gradio = ["gradio>=5"]
dev = ["pytest>=7.4", "pytest-cov", "flake8", "gradio>=5"]

[project.urls]
"Homepage" = "https://github.com/scbirlab/bartab"
"Bug Tracker" = "https://github.com/scbirlab/bartab/issues"

[project.scripts] 
bartab = "bartab.cli:main"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {bartab = ["data/*.json"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[test]
deps = ["pytest>=7.4", "pytest-cov", "bartab[dev]"] 
